atualização do repositório

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
             </div>
         </nav>
+        <section id="quem somos"></section>
+        <div class="container-fluid  quem-somos text-center margin">
+            <p>teste</p>
+        </div>
     </body>
     </head>
 </html>
