--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <body>
         
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light margin">
             <a class="navbar-brand" href="#">
                 <img src="img/logo_pequena.png" width="220" height="80">
             </a>
             <div class="collapse navbar-collapse">
               <ul class="navbar-nav">
                    <li class="nav-item">
-                       <a class="nav-link" href="#">Quem somos</a>
+                       <a class="nav-link" href="quemsomos">Quem somos</a>
                   </li>
                    <li class="nav-item">
                        <a class="nav-link" href="#">Parceiros</a>
@@ -26,10 +26,25 @@
 
             </div>
         </nav>
-        <section id="quem somos"></section>
+        <section id="quem somos">
         <div class="container-fluid  quem-somos text-center margin">
-            <p>teste</p>
+            <h3>Quem somos</h3>
+            <img src="img/casual.jpg"  class="rounded-circle" width="400" height="400">
+            <h3>Somos um time comprometido com resultados</h3>
         </div>
+    </section>
+    <section id="parceiros"> 
+        <div class="container-fluid text-center margin parceiros">
+            <h3>PARCEIROS</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="img/dio.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     </body>
     </head>
-</html>
+</html> 
