--- a/index.html
+++ b/index.html
@@ -38,8 +38,18 @@
             <h3>PARCEIROS</h3>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
-                        <img src="img/dio.png">
+                    <div class="col-lg-4">
+                        <img src="img/dio.png" width="100">
+                </div>
+                            <div class="col-lg-4">
+                                <img src="img/dio.png" width="100">
+                            </div>
+                                    <div class="col-lg-4">
+                                        <img src="img/dio.png" width="100">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
