--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                        <a class="nav-link" href="quemsomos">Quem somos</a>
                   </li>
                    <li class="nav-item">
-                       <a class="nav-link" href="#">Parceiros</a>
+                       <a class="nav-link" href="parceiros">Parceiros</a>
                  </li>
                    <li class="nav-item">
-                        <a class="nav-link" href="#">Servicos</a>
+                        <a class="nav-link" href="servicos">Serviços</a>
                   </li>
               </ul>
 
@@ -35,7 +35,7 @@
     </section>
     <section id="parceiros"> 
         <div class="container-fluid text-center margin parceiros">
-            <h3>PARCEIROS</h3>
+            <h3 class="margin">PARCEIROS</h3>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
@@ -55,6 +55,34 @@
             </div>
         </div>
     </section>
+    <section id="servicos">
+        <div class="container-fluid text-center margin servicos">
+            <h3 class="margin">SERVIÇOS</h3>
+            <div class="container">
+                <div class="row">
+                <div class="col-lg-6">
+                    <p>trabalhamos bem </p>
+                    <img src="img/logo.jpg" width="100%">
+
+                </div>
+                <div class="col-lg-6">
+                    <p>trabalhamos bem </p>
+
+                   <img src="img/contrução_de_site.jpg" width="100%">
+                </div>
+                <div class="col-lg-4">
+                    <p>trabalhamos bem </p>
+                    <img src="img/logo_pequena.png" width="100%">
+                </div>
+
+                </div>
+        </div>
+        </div>
+
+    </section>
+    <footer class="container-fluid text-center bg-footer margin">
+        <p>DESENVOLVIDO POR WEDERSON DA SIVLA SANTOS</p>
+    </footer>
     </body>
     </head>
 </html> 
